@@ -1,6 +1,5 @@
-11/12/2025:
-[+] Added Half-Life 1 (Thanks for the suggestion ThatOneAmerican!)
-[+] Added Pokémon Black 2 (Thanks for the suggestion BubbaNator5000!)
-[+] Added Pokémon White 2 (Thanks for the suggestion BubbaNator5000!)
-[+] Added Slender: The Eight Pages (Thanks for the suggestion enriqueeeeeeeee)
-[+] I kinda realized the "Cooking Mama" game was misleading, so I changed the name and added the real Cooking Mama.
+11/15/2025:
+[+] Added Cluster Rush (Thanks for the suggestion!)
+
+11/13/2025:
+[+] Added Hollow Knight (Thanks for the suggestion Hudsyn ganey)
